--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@
   }
 
   function noThanks() {
-    alert("Aww 😢 maybe next time~");
+    alert("BUT WHY??!!!😢 PLEASE READ ITT :(((((~");
   }
 
   function startOver() {
@@ -231,4 +231,5 @@
 
 </body>
 </html>
+
 
