--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
 
 <!-- Envelope Card -->
 <div class="card visible" id="envelopeCard">
-  <img src="https://static.wikia.nocookie.net/needy-streamer-overload/images/c/cc/Tweet_selfie_cho_happy_002.png/revision/latest?cb=20220228052148" alt="pink envelope">
+  <img src="https://i.pinimg.com/736x/d2/6d/d6/d26dd6d558db9417313140ef0754b70b.jpg" alt="pink envelope">
   <h2>Do you want to open it?</h2>
   <p>"ヾ(˃̶⺫˂̶)ノ"</p>
   <div class="buttons">
@@ -265,3 +265,4 @@
 
 </body>
 </html>
+
