--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
 
   <!-- Envelope Card -->
   <div class="card visible" id="envelopeCard">
-    <img src="https://static.wikia.nocookie.net/needy-streamer-overload/images/c/cc/Tweet_selfie_cho_happy_002.png/revision/latest?cb=20220228052148" alt="pink envelope">
+    <img src="https://i.pinimg.com/736x/ce/bb/b8/cebbb82af58fca88346aa561021856d0.jpg" alt="pink envelope">
     <h2>Do you want to open it?</h2>
     <p>"ヾ(˃̶⺫˂̶)ノ"</p>
     <div class="buttons">
@@ -282,3 +282,4 @@
 
 </body>
 </html>
+
