--- a/index.html
+++ b/index.html
@@ -234,10 +234,10 @@
 
   <script>
     const spotifyPlayer = document.getElementById("spotifyPlayer");
-    const correctPassword = "iloveeri"; // ← change this to your desired password
+    const correctPassword = "1013"; // ← change this to your desired password
 
     function askPassword() {
-      const input = prompt("HIHI💌");
+      const input = prompt("Date today?💌");
       if (input === correctPassword) {
         openLetter();
       } else if (input !== null) {
@@ -282,4 +282,5 @@
 
 </body>
 </html>
+
 
