--- a/index.html
+++ b/index.html
@@ -237,7 +237,7 @@
     const correctPassword = "1013"; // ← change this to your desired password
 
     function askPassword() {
-      const input = prompt("Date today?💌");
+      const input = prompt("Date?💌");
       if (input === correctPassword) {
         openLetter();
       } else if (input !== null) {
@@ -282,5 +282,6 @@
 
 </body>
 </html>
+
 
 
